<resources>
    <string name="app_name">Gaming Lobby</string>
    <string name="login_label">Login</string>
    <string name="user_text">Email</string>
    <string name="password">Password</string>
    <string name="entrar">Login</string>
    <string name="log_text">Loja</string>
    <string name="contador">Tentativas restantes:</string>
    <string name="image">logo</string>
    <string name="email">email</string>
    <string name="pass">pass</string>
    <string name="logo2">logo2</string>
    <string name="scroll">________________________</string>
    <string name="traco">_______________________</string>
    <string name="capa">capa</string>
    <string name="hoodie">hoodie</string>
    <string name="checkbox">Memorizar palavra-passe</string>
    <string name="Registar">Registar</string>
    <string name="Traco">______________</string>
    <string name="nif">NIF</string>
    <string name="telefone">Telefone</string>
    <string name="confirme_password">Confirme Password</string>
    <string name="nif_image">TODO</string>
    <string name="questao_registo">Ainda não está registado?</string>
    <string name="traco_regista">________________________</string>
    <string name="phone_image">TODO</string>
    <string name="registar">Registar</string>
</resources>
